kubernets/04-deploy.yaml
---
# ==========================================
# MICROSERVICIOS (Backend)
# ==========================================

# --- Auth Service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: micaelasalcedo/authservice:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: logiflow
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

---
# --- Billing Service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
      - name: billing-service
        image: micaelasalcedo/billing-service:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: logiflow
spec:
  selector:
    app: billing-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082

---
# --- Fleet Service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-service
  template:
    metadata:
      labels:
        app: fleet-service
    spec:
      containers:
      - name: fleet-service
        image: micaelasalcedo/fleet-service:latest
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-service
  namespace: logiflow
spec:
  selector:
    app: fleet-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083

---
# --- Pedido Service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedido-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedido-service
  template:
    metadata:
      labels:
        app: pedido-service
    spec:
      containers:
      - name: pedido-service
        image: micaelasalcedo/pedido-service:latest
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: pedido-service
  namespace: logiflow
spec:
  selector:
    app: pedido-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084

---
# --- Tracking Service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-service
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking-service
  template:
    metadata:
      labels:
        app: tracking-service
    spec:
      containers:
      - name: tracking-service
        image: micaelasalcedo/tracking-service:latest
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: tracking-service
  namespace: logiflow
spec:
  selector:
    app: tracking-service
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090

---
# --- MS Notifications ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-notifications
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-notifications
  template:
    metadata:
      labels:
        app: ms-notifications
    spec:
      containers:
      - name: ms-notifications
        image: micaelasalcedo/ms-notifications:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ms-notifications
  namespace: logiflow
spec:
  selector:
    app: ms-notifications
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
# --- Delivery GraphQL Service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-graphql
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-graphql
  template:
    metadata:
      labels:
        app: delivery-graphql
    spec:
      containers:
      - name: delivery-graphql
        image: micaelasalcedo/delivery-graphql-service:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-graphql-service
  namespace: logiflow
spec:
  selector:
    app: delivery-graphql
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000

---
# ==========================================
# API GATEWAY (Punto de entrada)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: logiflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: micaelasalcedo/api-gateway:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: logiflow
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
